@@ -5,12 +5,24 @@
 # 2018-05-23: fixed bug when more than one grouping variable (reported by Maarten Jung)
 # 2018-06-07: skip plot of "sigma^2" in GLMM if dispersion fixed to 1; improved labelling for covariance components
 # 2018-11-04: tweak to dfbetas.influence.merMod() suggested by Ben Bolker.
+# 2018-11-07: parallel version of influence.merMod()
 
 # influence diagnostics for mixed models
 
 globalVariables(".groups")
 
-influence.merMod <- function(model, groups, data, maxfun=1000, ...){
+influence.merMod <- function(model, groups, data, maxfun=1000,
+                             ncores=1, ...) {
+    # this version of function modified from lme4
+    
+    vv <- function(x) Matrix::as.matrix(vcov(x))
+    
+    .groups <- NULL  ## avoid false-positive code checks
+    
+    if (is.infinite(ncores)) {
+        ncores <- parallel::detectCores()
+    }
+    if (length(list(...))>0) warning("disregarded additional arguments")
     if (missing(data)){
         data <- getCall(model)$data
         data <- if (!is.null(data)) eval(data, parent.frame())
@@ -22,17 +34,14 @@ influence.merMod <- function(model, groups, data, maxfun=1000, ...){
     }
     else if (length(groups) > 1){
         del.var <- paste0(groups, collapse=".")
-        data[, del.var] <- apply(data[, groups], 1, function (row) paste0(row, collapse="."))
+        data[, del.var] <- apply(data, 1, paste0, collapse=".")
         groups <- del.var
     }
     unique.del <- unique(data[, groups])
-    data$.groups <- data[, groups]
+    data[[".groups"]] <- data[, groups]
     par <- list(theta=lme4::getME(model, "theta"))
     if (inherits(model, "glmerMod")) par$fixef <- fixef(model)
     fixed <- fixef(model)
-    fixed.1 <- matrix(0, length(unique.del), length(fixed))
-    rownames(fixed.1) <- unique.del
-    colnames(fixed.1) <- names(fixed)
     Vs <- lme4::VarCorr(model)
     nms <- names(Vs)
     sep <- ":"
@@ -51,38 +60,47 @@ influence.merMod <- function(model, groups, data, maxfun=1000, ...){
         names(v) <- paste0(nms[i], sep, e.names[lower.tri(e.names, diag=TRUE)])
         vc <- c(vc, v)
     }
-    vc.1 <- matrix(0, length(unique.del), length(vc))
-    rownames(vc.1) <- unique.del
-    colnames(vc.1) <- names(vc)
-    feval <- numeric(length(unique.del))
-    converged <- logical(length(unique.del))
-    vcov.1 <- vector(length(unique.del), mode="list")
-    names(vcov.1) <- names(feval) <- names(converged) <- unique.del
-    # control <- if (one.step){
-    #     if (inherits(model, "lmerMod")) lme4::lmerControl(optimizer="optimx", optCtrl=list(method="L-BFGS-B", maxit=1))
-    #     else if (inherits(model, "glmerMod")) lme4::glmerControl(optimizer="optimx", optCtrl=list(method="L-BFGS-B", maxit=1))
-    # } else {
-    control <- if (inherits(model, "lmerMod")) lme4::lmerControl(optCtrl=list(maxfun=maxfun))
-        else if (inherits(model, "glmerMod")) lme4::glmerControl(optCtrl=list(maxfun=maxfun))
-    # }
-    if (is.null(control)) stop("model not an lmer or glmer object")
-    for (del in unique.del){
+    control <- if (inherits(model, "lmerMod")) lme4:: lmerControl(optCtrl=list(maxfun=maxfun))
+    else if (inherits(model, "glmerMod")) lme4:: glmerControl(optCtrl=list(maxfun=maxfun))
+    deleteGroup <- function(del){
         data$del <- del
-        mod.1 <- suppressWarnings(update(model, data=data, subset=.groups != del, start=par,
+        mod.1 <- suppressWarnings(update(model, data=data,
+                                         subset=(.groups != del),
+                                         start=par,
                                          control=control))
-
         opt <- mod.1@optinfo
-        feval[del] <- opt$feval
-        converged[del] <- opt$conv$opt == 0 && length(opt$warnings) == 0
-        fixed.1[del, ] <- fixef(mod.1)
+        feval <- opt$feval
+        converged <- opt$conv$opt == 0 && length(opt$warnings) == 0
+        fixed.1 <- fixef(mod.1)
         Vs.1 <- lme4::VarCorr(mod.1)
         vc.0 <- lme4::getME(mod.1, "sigma")^2
         for (V in Vs.1){
             vc.0 <- c(vc.0, V[lower.tri(V, diag=TRUE)])
         }
-        vc.1[del, ] <- vc.0
-        vcov.1[[del]] <- vcov(mod.1)
+        vc.1 <- vc.0
+        vcov.1 <<- vv(mod.1)
+        list(fixed.1=fixed.1, vc.1=vc.1, vcov.1=vcov.1, converged=converged, feval=feval)
     }
+    result <- if(ncores >= 2){
+        message("Note: using a cluster of ", ncores, " cores")
+        cl <- parallel::makeCluster(ncores)
+        on.exit(parallel::stopCluster(cl))
+        parallel::clusterEvalQ(cl, require("lme4"))
+        parallel::clusterApply(cl, unique.del, deleteGroup)
+    } else {
+        lapply(unique.del, deleteGroup)
+    }
+    result <- combineLists(result)
+    fixed.1 <- result$fixed.1
+    rownames(fixed.1) <- unique.del
+    colnames(fixed.1) <- names(fixed)
+    vc.1 <- result$vc.1
+    rownames(vc.1) <- unique.del
+    colnames(vc.1) <- names(vc)
+    feval <- as.vector(result$feval)
+    converged <- as.vector(result$converged)
+    vcov.1 <- result$vcov.1
+    names(vcov.1) <- names(feval) <- names(converged) <- unique.del
     left <- "[-"
     right <- "]"
     if (groups == ".case") {
@@ -92,11 +110,101 @@ influence.merMod <- function(model, groups, data, maxfun=1000, ...){
              "var.cov.comps", paste0("var.cov.comps", left, groups, right),
              "vcov", paste0("vcov", left, groups, right),
              "groups", "deleted", "converged", "function.evals")
-    result <- list(fixed, fixed.1, vc, vc.1, vcov(model), vcov.1, groups, unique.del, converged, feval)
+    result <- list(fixed, fixed.1, vc, vc.1,
+                   vv(model), vcov.1, groups, unique.del, converged, feval)
     names(result) <- nms
     class(result) <- "influence.merMod"
     result
 }
+
+
+# influence.merMod <- function(model, groups, data, maxfun=1000, ...){
+#     if (missing(data)){
+#         data <- getCall(model)$data
+#         data <- if (!is.null(data)) eval(data, parent.frame())
+#         else stop("model did not use the data argument")
+#     }
+#     if (missing(groups)) {
+#         groups <- ".case"
+#         data$.case <- rownames(data)
+#     }
+#     else if (length(groups) > 1){
+#         del.var <- paste0(groups, collapse=".")
+#         data[, del.var] <- apply(data[, groups], 1, function (row) paste0(row, collapse="."))
+#         groups <- del.var
+#     }
+#     unique.del <- unique(data[, groups])
+#     data$.groups <- data[, groups]
+#     par <- list(theta=lme4::getME(model, "theta"))
+#     if (inherits(model, "glmerMod")) par$fixef <- fixef(model)
+#     fixed <- fixef(model)
+#     fixed.1 <- matrix(0, length(unique.del), length(fixed))
+#     rownames(fixed.1) <- unique.del
+#     colnames(fixed.1) <- names(fixed)
+#     Vs <- lme4::VarCorr(model)
+#     nms <- names(Vs)
+#     sep <- ":"
+#     if (length(nms) == 1) {
+#         nms <- ""
+#         sep <- ""
+#     }
+#     vc <- lme4::getME(model, "sigma")^2
+#     names(vc) <- "sigma^2"
+#     for (i in 1:length(Vs)){
+#         V <- Vs[[i]]
+#         c.names <- colnames(V)
+#         e.names <- outer(c.names, c.names, function(a, b) paste0("C[", a, ",", b, "]"))
+#         diag(e.names) <- paste0("v[", c.names, "]")
+#         v <- V[lower.tri(V, diag=TRUE)]
+#         names(v) <- paste0(nms[i], sep, e.names[lower.tri(e.names, diag=TRUE)])
+#         vc <- c(vc, v)
+#     }
+#     vc.1 <- matrix(0, length(unique.del), length(vc))
+#     rownames(vc.1) <- unique.del
+#     colnames(vc.1) <- names(vc)
+#     feval <- numeric(length(unique.del))
+#     converged <- logical(length(unique.del))
+#     vcov.1 <- vector(length(unique.del), mode="list")
+#     names(vcov.1) <- names(feval) <- names(converged) <- unique.del
+#     # control <- if (one.step){
+#     #     if (inherits(model, "lmerMod")) lme4::lmerControl(optimizer="optimx", optCtrl=list(method="L-BFGS-B", maxit=1))
+#     #     else if (inherits(model, "glmerMod")) lme4::glmerControl(optimizer="optimx", optCtrl=list(method="L-BFGS-B", maxit=1))
+#     # } else {
+#     control <- if (inherits(model, "lmerMod")) lme4::lmerControl(optCtrl=list(maxfun=maxfun))
+#         else if (inherits(model, "glmerMod")) lme4::glmerControl(optCtrl=list(maxfun=maxfun))
+#     # }
+#     if (is.null(control)) stop("model not an lmer or glmer object")
+#     for (del in unique.del){
+#         data$del <- del
+#         mod.1 <- suppressWarnings(update(model, data=data, subset=.groups != del, start=par,
+#                                          control=control))
+# 
+#         opt <- mod.1@optinfo
+#         feval[del] <- opt$feval
+#         converged[del] <- opt$conv$opt == 0 && length(opt$warnings) == 0
+#         fixed.1[del, ] <- fixef(mod.1)
+#         Vs.1 <- lme4::VarCorr(mod.1)
+#         vc.0 <- lme4::getME(mod.1, "sigma")^2
+#         for (V in Vs.1){
+#             vc.0 <- c(vc.0, V[lower.tri(V, diag=TRUE)])
+#         }
+#         vc.1[del, ] <- vc.0
+#         vcov.1[[del]] <- vcov(mod.1)
+#     }
+#     left <- "[-"
+#     right <- "]"
+#     if (groups == ".case") {
+#         groups <- "case"
+#     }
+#     nms <- c("fixed.effects", paste0("fixed.effects", left, groups, right),
+#              "var.cov.comps", paste0("var.cov.comps", left, groups, right),
+#              "vcov", paste0("vcov", left, groups, right),
+#              "groups", "deleted", "converged", "function.evals")
+#     result <- list(fixed, fixed.1, vc, vc.1, vcov(model), vcov.1, groups, unique.del, converged, feval)
+#     names(result) <- nms
+#     class(result) <- "influence.merMod"
+#     result
+# }
 
 dfbeta.influence.lme <- function(model, which=c("fixed", "var.cov"), ...){
     if (missing(which)) which <- "fixed"
